--- a/app/src/main/res/layout/activity_movie_detail.xml
+++ b/app/src/main/res/layout/activity_movie_detail.xml
@@ -1,83 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true"
-    tools:context=".MovieDetailActivity">
-
-    <!-- <android.support.design.widget.AppBarLayout
+<layout>
+    <data>
+        <variable name="movie" type="com.codepath.flickster.models.Movie"/>
+    </data>
+    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        xmlns:app="http://schemas.android.com/apk/res-auto"
+        xmlns:tools="http://schemas.android.com/tools"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:id="@+id/toolbar">
+        android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
+        tools:context=".MovieDetailActivity">
 
-        <android.support.v7.widget.Toolbar
+        <!-- <android.support.design.widget.AppBarLayout
             android:layout_width="match_parent"
-            android:layout_height="?attr/actionBarSize"
-            android:background="?attr/colorPrimary"
-            app:popupTheme="@style/AppTheme.PopupOverlay" />
+            android:layout_height="wrap_content"
+            android:theme="@style/AppTheme.AppBarOverlay"
+            android:id="@+id/toolbar">
 
-    </android.support.design.widget.AppBarLayout> -->
+            <android.support.v7.widget.Toolbar
+                android:layout_width="match_parent"
+                android:layout_height="?attr/actionBarSize"
+                android:background="?attr/colorPrimary"
+                app:popupTheme="@style/AppTheme.PopupOverlay" />
 
-    <com.google.android.youtube.player.YouTubePlayerView
-        android:id="@+id/player"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        </android.support.design.widget.AppBarLayout> -->
 
-    <RatingBar android:id="@+id/ratingBar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:numStars="5"
-        android:stepSize="1.0"
-        android:clickable="false"
-        android:focusableInTouchMode="false"
-        android:isIndicator="true"
-        android:focusable="false"
-        android:layout_below="@+id/player"
-        android:layout_marginStart="@dimen/medium_margin"
-        android:layout_marginEnd="@dimen/medium_margin"
-        android:layout_marginTop="@dimen/small_margin" />
+        <com.google.android.youtube.player.YouTubePlayerView
+            android:id="@+id/player"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        tools:text="title"
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:id="@+id/movieTitle"
-        android:layout_below="@+id/ratingBar"
-        android:layout_marginStart="@dimen/medium_margin"
-        android:layout_marginEnd="@dimen/medium_margin"
-        android:minLines="1"
-        android:maxLines="2"
-        android:paddingBottom="10dp" />
+        <RatingBar android:id="@+id/ratingBar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:numStars="5"
+            android:rating="@{(float)movie.getRating()}"
+            android:stepSize="1.0"
+            android:clickable="false"
+            android:focusableInTouchMode="false"
+            android:isIndicator="true"
+            android:focusable="false"
+            android:layout_below="@+id/player"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/small_margin" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/movieReleaseDate"
-        android:layout_below="@+id/movieTitle"
-        android:layout_marginStart="@dimen/medium_margin"
-        android:layout_marginEnd="@dimen/medium_margin"
-        tools:text="2015/12/23/" />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            tools:text="@{movie.getOriginalTitle()}"
+            android:textAppearance="?android:attr/textAppearanceLarge"
+            android:id="@+id/movieTitle"
+            android:layout_below="@+id/ratingBar"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:minLines="1"
+            android:maxLines="2"
+            android:paddingBottom="10dp" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/movieOverview"
-        android:layout_below="@+id/movieReleaseDate"
-        android:layout_marginStart="@dimen/medium_margin"
-        android:layout_marginEnd="@dimen/medium_margin"
-        android:layout_marginTop="@dimen/small_margin"
-        android:minLines="2"
-        android:maxLines="5"/>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/movieReleaseDate"
+            android:layout_below="@+id/movieTitle"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginEnd="@dimen/medium_margin"
+            tools:text='@{"Release Date: " + movie.getReleaseDate()}' />
 
-    <!-- <android.support.design.widget.FloatingActionButton
-        android:id="@+id/fab"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="bottom|end"
-        android:layout_margin="@dimen/fab_margin"
-        android:src="@android:drawable/ic_dialog_email" /> -->
-</RelativeLayout>
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/movieOverview"
+            android:layout_below="@+id/movieReleaseDate"
+            android:layout_marginStart="@dimen/medium_margin"
+            android:layout_marginEnd="@dimen/medium_margin"
+            android:layout_marginTop="@dimen/small_margin"
+            android:minLines="2"
+            android:maxLines="5"
+            tools:text='@{movie.getOverview()}' />
+    </RelativeLayout>
+</layout>
